# hpc-ops

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE.txt  MANIFEST.in  Makefile  README.md  conftest.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py  version_with_meta.py
.ci/: build-tag.yaml  build.yaml
3rd/: README.md  readme  update-cutlass.sh  update-nvshmem.sh  update-ucl.sh
3rd/ucl/: CMakeLists.txt
3rd/ucl/cmake/: UCLConfig.cmake.in
3rd/ucl/nvshmem/: CMakeLists.txt
3rd/ucl/nvshmem/src/: CMakeLists.txt
3rd/ucl/nvshmem/src/device/launch/: collective_launch.cpp
3rd/ucl/nvshmem/src/host/bootstrap/: bootstrap_loader.cpp
3rd/ucl/nvshmem/src/host/coll/: cpu_coll.cpp  cpu_coll.h
3rd/ucl/nvshmem/src/host/coll/alltoall/: alltoall_on_stream.cpp
3rd/ucl/nvshmem/src/host/coll/barrier/: barrier.cpp  barrier_on_stream.cpp
3rd/ucl/nvshmem/src/host/coll/broadcast/: broadcast.cpp  broadcast_on_stream.cpp
3rd/ucl/nvshmem/src/host/coll/fcollect/: fcollect.h  fcollect_on_stream.cpp
3rd/ucl/nvshmem/src/host/coll/rdxn/: rdxn_on_stream.cpp
3rd/ucl/nvshmem/src/host/coll/reducescatter/: reducescatter.cpp  reducescatter.h  reducescatter_on_stream.cpp
3rd/ucl/nvshmem/src/host/comm/: amo.cpp  fence.cpp  quiet.cpp  rma.cu  sync.cpp
3rd/ucl/nvshmem/src/host/init/: init.cu  init_nvtx.cpp  query_host.cpp
3rd/ucl/nvshmem/src/host/mem/: mem_transport.cpp
3rd/ucl/nvshmem/src/host/proxy/: proxy.cpp  proxy_host.h
3rd/ucl/nvshmem/src/host/stream/coll/alltoall/: alltoall.cu
3rd/ucl/nvshmem/src/host/stream/coll/barrier/: barrier.cu
3rd/ucl/nvshmem/src/host/stream/coll/broadcast/: broadcast.cu
3rd/ucl/nvshmem/src/host/stream/coll/rdxn/: reduce_or.cu  reduce_team.cu  reduce_xor.cu
3rd/ucl/nvshmem/src/host/stream/coll/reducescatter/: reducescatter_common.cuh  reducescatter_prod.cu  reducescatter_xor.cu
3rd/ucl/nvshmem/src/host/team/: team.cu  team_internal_cuda.cu
3rd/ucl/nvshmem/src/host/topo/: topo.cpp  topo.h
3rd/ucl/nvshmem/src/host/transport/p2p/: p2p.h
3rd/ucl/nvshmem/src/host/util/: util.cpp
3rd/ucl/nvshmem/src/include/bootstrap_host_transport/: env_defs_internal.h
3rd/ucl/nvshmem/src/include/host/env/: env_defs.h
3rd/ucl/nvshmem/src/include/internal/bootstrap_host_transport/: nvshmemi_bootstrap_defines.h
3rd/ucl/nvshmem/src/include/internal/device/: nvshmemi_device.h
3rd/ucl/nvshmem/src/include/internal/host/: cuda_interface_sync.h  debug.h  error_codes_internal.h  nvshmem_nvtx.hpp  nvshmemi_bootstrap_library.h  nvshmemi_nvls_rsc.hpp  nvshmemi_symmetric_heap.hpp  util.h
3rd/ucl/nvshmem/src/include/internal/host_transport/: nvshmemi_transport_defines.h
3rd/ucl/nvshmem/src/include/internal/non_abi/: nvshmemi_h_to_d_rma_defs.cuh  nvshmemi_h_to_d_sync_defs.cuh
3rd/ucl/nvshmem/src/include/non_abi/: nvshmem_build_options.h.in
3rd/ucl/nvshmem/src/modules/bootstrap/common/: bootstrap_util.cpp  bootstrap_util.h
3rd/ucl/nvshmem/src/modules/bootstrap/pmi/pmi-2/: pmi2.h  pmi2_util.c  pmi2_util.h
3rd/ucl/nvshmem/src/modules/bootstrap/pmi/simple-pmi/: simple_pmi.cpp
3rd/ucl/nvshmem/src/modules/bootstrap/pmix/: bootstrap_pmix.c
3rd/ucl/nvshmem/src/modules/bootstrap/uid/ncclSocket/: ncclsocket_param.h  ncclsocket_utils.h
3rd/ucl/nvshmem/src/modules/transport/common/: env_defs.h  transport_gdr_common.cpp  transport_mlx5_common.cpp  transport_mlx5_common.h
3rd/ucl/nvshmem/src/modules/transport/ibdevx/: ibdevx.h
3rd/ucl/nvshmem/src/modules/transport/ibgda/: ibgda.cpp
3rd/ucl/nvshmem/src/modules/transport/ibrc/: ibrc.cpp
3rd/ucl/nvshmem/src/modules/transport/libfabric/: libfabric.h
3rd/ucl/nvshmem/src/modules/transport/ucx/: ucx.cpp
3rd/ucl/src/device/: shmem_device.cu
3rd/ucl/src/host/: shmem_host.cpp
3rd/ucl/src/include/ucl/: shmem.h  shmem_extensions.h  shmem_host.h
3rd/ucl/src/include/ucl/bootstrap_device_host/: shmem_uniqueid.h
3rd/ucl/src/include/ucl/device/: shmem_coll_defines.cuh  shmem_defines.cuh  shmem_device_macros.cuh  shmemx_coll_defines.cuh  shmemx_collective_launch_apis.cuh  shmemx_defines.cuh
3rd/ucl/src/include/ucl/device_host/: shmem_common.cuh  shmem_proxy_channel.h  shmem_tensor.h  shmem_types.h
3rd/ucl/src/include/ucl/device_host_transport/: shmem_common_ibgda.h  shmem_common_transport.h  shmem_constants.h
3rd/ucl/src/include/ucl/extensions/: configs.cuh  exception.cuh  ibgda_device.cuh  utils.cuh
3rd/ucl/src/include/ucl/host/: shmem_api.h  shmem_coll_api.h  shmem_macros.h  shmemx_api.h  shmemx_coll_api.h
benchmark/: bench_allreduce_rmsnorm.py
benchmarks/: benchmark_gemm_bf16xfp32.py
cicd/: 1.start-docker.sh  2.build-wheel.sh  3.test.sh  check-no-chinese.py  readme
dsl/: __init__.py
hpc/: __init__.py  act.py  add.py  allreduce.py  attention.py  cast.py  comm_gemm.py  communicator.py  fuse_moe.py  gem3.py  gemm.py  group_gemm.py  hadamard.py  indexer.py  kv_compressor.py  kv_compressor_decode.py  mHC.py  mamba.py  math.py  multicast_handle.py  multinode_handle.py  normalization.py  ops.py  quant.py  rope.py  routing_method.py  sage_attention.py  sampler.py  scale.py  stem.py  topk.py  ucl_comm.py
src/: _C.cc  ptx_wrapper.cuh  utils.cuh
tests/: _reference_helpers.py  bench_flashinfer_fuse_moe.py  bench_fuse_moe_bf16.py  bench_fuse_moe_mxfp8.py  bench_fuse_moe_mxfp8_fp4_vs_flashinfer.py  bench_fuse_moe_mxfp8_vs_fp8.py  bench_group_gemm_bf16.py  bench_group_gemm_cp_async_vs_tma.py  bench_group_gemm_mxfp4_tma_vs_cpasync.py  bench_group_gemm_mxfp8_fp4_vs_deepgemm.py  bench_group_gemm_mxfp8_vs_flashinfer.py  bench_group_gemm_mxfp8_vs_fp8.py  test_act.py  test_add.py  test_attention_benchmark.py  test_attention_blocksparse_fp8.py  test_attention_blocksparse_prefill_fp8_dim192.py  test_attention_blocksparse_qkpertoken_perhead_vperhead_fp8.py  test_attention_blocksparse_qpertoken_perhead_kvpertensor_fp8.py  test_attention_decode_benchmark.py  test_attention_decode_bf16.py  test_attention_decode_bf16_adaptive.py  test_attention_decode_fp8.py  test_attention_decode_fp8_dynamic_sm90.py  test_attention_decode_fp8_kv_fp16_pv_compute.py  test_attention_decode_fp8_pertensor.py  (+95 more)
(+585 files in other folders)
